adding stuff to fix

--- a/3rd notebook.ipynb
+++ b/3rd notebook.ipynb
@@ -1294,7 +1294,11 @@
    "id": "157ca13a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('smallWords.txt', \"w\")as sw:\n",
+    "    with open('bigWords.txt', \"w\")as bw:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
